--- a/contact-us.html
+++ b/contact-us.html
@@ -85,30 +85,30 @@
             <button type="submit" class="px-10 py-18px text-xl text-white bg-black hover:shadow-md hover:shadow-gray-700 rounded-sixty">Subscribe</button>
         </div>
         </section>
-        <section class="py-20 lg:py-60px px-10 sm:px-20 border flex flex-row flex-wrap items-start justify-start lg:grid grid-cols-12 border-black rounded-ten md:rounded-twoFifty lg:rounded-fiveHundred">
-        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full md:w-fiftyPercent lg:w-full pt-10 lg:pt-0">
-           <h1 class="font-avenirHeavy text-3xl">Company</h1>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">About</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Team</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Impact</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Careers</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Partnerships</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Press</a>
+        <section class="py-10 md:py-20 lg:py-60px px-5 sm:px-10 md:px-20 border flex flex-row flex-wrap items-start justify-start lg:grid grid-cols-12 border-black rounded-ten md:rounded-twoFifty lg:rounded-fiveHundred">
+        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full sm:w-fiftyPercent  lg:w-full pt-10 lg:pt-0">
+           <h1 class="font-avenirHeavy text-xl md:text-3xl">Company</h1>
+           <a href="./about-us.html" class="font-avenirRegular text-base md:text-xl text-black hover:underline">About</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Team</a>
+           <a href="./impact.html" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Impact</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Careers</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Partnerships</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Press</a>
         </div>
-        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full md:w-fiftyPercent lg:w-full pt-10 lg:pt-0">
-           <h1 class="font-avenirHeavy text-3xl">Legals</h1>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Website T&Cs</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">App Terms & Conditions</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Privacy policy</a>
-           <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Partner Charter</a>
+        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full sm:w-fiftyPercent  lg:w-full pt-10 lg:pt-0">
+           <h1 class="font-avenirHeavy text-xl md:text-3xl">Legals</h1>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Website T&Cs</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">App Terms & Conditions</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Privacy policy</a>
+           <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Partner Charter</a>
         </div>
-        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full md:w-fiftyPercent lg:w-full pt-10 lg:pt-0">
-            <h1 class="font-avenirHeavy text-3xl">Resources</h1>
-            <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Blog</a>
-            <a href="#" class="font-avenirRegular text-xl text-black hover:underline">Live chat</a>
+        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full sm:w-fiftyPercent  lg:w-full pt-10 lg:pt-0">
+            <h1 class="font-avenirHeavy text-xl md:text-3xl">Resources</h1>
+            <a href="./blog.html" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Blog</a>
+            <a href="#" class="font-avenirRegular text-base md:text-xl text-black hover:underline">Live chat</a>
         </div>
-        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full md:w-fiftyPercent lg:w-full pt-10 lg:pt-0">
-            <h1 class="font-avenirHeavy text-3xl">Reach us</h1>
+        <div class="flex flex-col space-y-2 col-span-3 px-4 w-full sm:w-fiftyPercent  lg:w-full pt-10 lg:pt-0">
+            <h1 class="font-avenirHeavy text-xl md:text-3xl">Reach us</h1>
             <div class="flex flex-row items-center gap-2">
                 <a href="https://www.linkedin.com/company/shopperbagng/">
                     <img src="./assets/images/icons/social/akar-icons_linkedin-box-fill.png" alt="linkedin" class="w-6 h-6">
