--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-white mt-4 mb-5">
+        <nav class="navbar navbar-expand-lg bg-whit mt-4 mb-5">
             <div class="container">
               <a class="navbar-brand " href="index.html"><img src="./assets/images/logo-brand.svg" width="250" alt="" class="ms-0 ms-sm-5"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
